# zero

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  compose.yaml  justfile  llms.txt  railway.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labels.yml
Formula/: zero.rb
cli/: Cargo.toml  README.md
cli/.lints/: README.md  check-anti-patterns.sh
cli/crates/zero/: Cargo.toml
cli/crates/zero-commands/: Cargo.toml
cli/crates/zero-commands/examples/: live_smoke.rs
cli/crates/zero-commands/src/: command.rs  config.rs  dispatch.rs  friction.rs  lib.rs  parse.rs  risk.rs  session.rs  supervisor.rs
cli/crates/zero-commands/tests/: auto_headless.rs  dispatch_integration.rs  fault_injection.rs  two_am_scenarios.rs
cli/crates/zero-config/: Cargo.toml
cli/crates/zero-config/src/: lib.rs
cli/crates/zero-doctor/: Cargo.toml
cli/crates/zero-doctor/src/: lib.rs
cli/crates/zero-doctor/tests/: doctor_integration.rs
cli/crates/zero-engine-client/: Cargo.toml
cli/crates/zero-engine-client/src/: http.rs  lib.rs  models.rs  poll.rs  rate_budget.rs  stat.rs  state.rs  ws.rs
cli/crates/zero-engine-client/tests/: http_breadth.rs  http_composition.rs  http_integration.rs  paper_api_contract.rs  rate_budget_integration.rs  ws_integration.rs
cli/crates/zero-engine-client/tests/fixtures/: brief.json  evaluate_sol.json  health.json  positions.json  pulse.json  risk.json  root.json  v2_status.json
cli/crates/zero-headless/: Cargo.toml
cli/crates/zero-headless/resources/: dev.getzero.headless.plist  zero-headlessd.service
cli/crates/zero-headless/src/: client.rs  daemon.rs  lib.rs  paths.rs  protocol.rs  state.rs
cli/crates/zero-headless/tests/: daemon_roundtrip.rs
cli/crates/zero-onboarding/: Cargo.toml
cli/crates/zero-onboarding/src/: lib.rs  plan.rs  prompt.rs  wizard.rs
cli/crates/zero-onboarding/tests/: wizard.rs
cli/crates/zero-operator-state/: Cargo.toml
cli/crates/zero-operator-state/benches/: classifier_tick.rs
cli/crates/zero-operator-state/src/: classifier.rs  events.rs  friction.rs  label.rs  lib.rs  snapshot.rs  vector.rs
cli/crates/zero-operator-state/tests/: golden_vectors.rs
cli/crates/zero-operator-state/tests/fixtures/: golden_snapshot.json
cli/crates/zero-session/: Cargo.toml
cli/crates/zero-session/migrations/: V001__init.sql
cli/crates/zero-session/src/: event.rs  lib.rs  store.rs  wrap.rs
cli/crates/zero-session/tests/: round_trip.rs
cli/crates/zero-testkit/: Cargo.toml
cli/crates/zero-testkit/src/: fixtures.rs  lib.rs  mock_engine.rs
cli/crates/zero-tui/: Cargo.toml
cli/crates/zero-tui/src/: layout.rs  lib.rs  theme.rs
cli/crates/zero-tui/src/app/: event_ring.rs  input.rs  log.rs  mod.rs  mode.rs  picker.rs  prompt.rs  render.rs  session.rs  state.rs  terminal.rs
cli/crates/zero-tui/src/widgets/: calibration.rs  conversation.rs  live_stream.rs  mod.rs  overlay.rs  pane.rs  picker.rs  position_row.rs  prompt.rs  stat.rs  statusbar.rs  verdict.rs
cli/crates/zero-tui/tests/: risk_overlay_m2_contract.rs  snapshots.rs  statusbar_fault_matrix.rs
cli/crates/zero-tui/tests/snapshots/: snapshots__conversation_empty_engine.snap  snapshots__conversation_scrolled_up.snap  snapshots__conversation_with_prompt.snap  snapshots__conversation_with_tilt_label.snap  snapshots__decisions_placeholder.snap  snapshots__heat_with_risk_ok.snap  snapshots__live_stream_pane_mixed.snap  snapshots__multiline_prompt_two_rows.snap  snapshots__positions_one_position.snap  snapshots__responsive_120_cols.snap  snapshots__responsive_200_cols.snap  snapshots__responsive_60_cols.snap  snapshots__risk_overlay_l3_proximity.snap  snapshots__risk_overlay_l4_halted.snap  snapshots__slash_picker_st_filter.snap  snapshots__state_overlay_elevated.snap  snapshots__verdict_overlay_pass_btc.snap  snapshots__widget_calibration_insufficient.snap  snapshots__widget_calibration_ok.snap  snapshots__widget_position_row_long.snap  snapshots__widget_verdict_empty.snap  snapshots__widget_verdict_pass.snap  statusbar_fault_matrix__statusbar_down_w40.snap  statusbar_fault_matrix__statusbar_down_w80.snap  statusbar_fault_matrix__statusbar_healthy_w200.snap  statusbar_fault_matrix__statusbar_healthy_w40.snap  statusbar_fault_matrix__statusbar_hl_exhausted_w120.snap  statusbar_fault_matrix__statusbar_rate_exhausted_w80.snap  statusbar_fault_matrix__statusbar_reconnecting_w200.snap  statusbar_fault_matrix__statusbar_reconnecting_w40.snap  statusbar_fault_matrix__statusbar_stale_w40.snap  statusbar_fault_matrix__statusbar_stale_w80.snap
cli/crates/zero/src/: auto_adapter.rs  main.rs  supervisor_adapter.rs
cli/crates/zero/tests/: cli.rs  commands_doc.rs  version_startup.rs
cli/docs/: commands.md  honesty.md
cli/scripts/: binary_size_guard.sh  idle_rss_check.sh
docs/: agentic-contribution.md  api-compatibility.md  api.md  architecture.md  autonomous-os-plan.md  backlog.md  cli-doctor-troubleshooting.md  evolve.md  (+47 more)
engine/: README.md  pyproject.toml
engine/src/zero_engine/: __init__.py  api.py  bus.py  decision.py  demo.py  deployment.py  evolve.py  genesis.py  hyperliquid.py  immune.py  intelligence.py  journal.py  live.py  live_canary_policy.py  live_certification.py  market.py  mcp.py  memory.py  model_gateway.py  models.py  network.py  paper.py  plugins.py  reconciliation.py  research.py  runners.py  runtime.py  safety.py  scenario.py  strategy.py
engine/tests/: test_api.py  test_bus.py  test_decision.py  test_evolve.py  test_examples.py  test_genesis.py  test_hyperliquid.py  test_immune.py  test_intelligence.py  test_live.py  test_live_canary_policy.py  test_live_trading_evidence.py  test_market.py  test_market_adapters.py  test_mcp.py  test_memory.py  test_model_gateway.py  test_network.py  test_paper.py  test_plugins.py  test_proof_privacy.py  test_reconciliation.py  test_research.py  test_runners.py  test_runtime.py  test_safety.py  test_scenario.py  test_strategy.py
(+169 files in other folders)
