[workspace]
resolver = "3"
members = [
    "crates/zero",
    "crates/zero-tui",
    "crates/zero-engine-client",
    "crates/zero-session",
    "crates/zero-config",
    "crates/zero-commands",
    "crates/zero-onboarding",
    "crates/zero-doctor",
    "crates/zero-operator-state",
    "crates/zero-testkit",
    "crates/zero-headless",
]

[workspace.package]
version = "0.3.0-dev"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/zero-intel/zero"
homepage = "https://getzero.dev"
authors = ["zero-intel"]

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# transport
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
url = "2"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# argv
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"

# storage
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# secrets — the crate is declared here; the consuming crate
# (`zero-config`) specifies per-target features so we only link
# the backend for the host OS. Without at least one backend,
# `keyring` silently falls back to a mock store, which is useless
# for real operators.
keyring = "3"

# time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# errors + logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# misc
directories = "5"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
# v4 is the idempotency-key flavor (random 128-bit) used by
# `POST /execute`; `fast-rng` pulls in `getrandom` without the
# heavier UUID-v1 time-source scaffolding.
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }

# test-only
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
insta = { version = "1", features = ["yaml", "redactions"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# internal crates (workspace refs)
zero-tui = { path = "crates/zero-tui", version = "0.3.0-dev" }
zero-engine-client = { path = "crates/zero-engine-client", version = "0.3.0-dev" }
zero-session = { path = "crates/zero-session", version = "0.3.0-dev" }
zero-config = { path = "crates/zero-config", version = "0.3.0-dev" }
zero-commands = { path = "crates/zero-commands", version = "0.3.0-dev" }
zero-onboarding = { path = "crates/zero-onboarding", version = "0.3.0-dev" }
zero-doctor = { path = "crates/zero-doctor", version = "0.3.0-dev" }
zero-operator-state = { path = "crates/zero-operator-state", version = "0.3.0-dev" }
zero-testkit = { path = "crates/zero-testkit", version = "0.3.0-dev" }
zero-headless = { path = "crates/zero-headless", version = "0.3.0-dev" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
multiple_crate_versions = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"

[profile.dev]
opt-level = 0
debug = 1
