[project]
name = "zero-engine"
version = "0.1.0"
description = "Self-hosted paper-first trading engine runtime for ZERO"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ZERO contributors" }]

[project.scripts]
zero-paper-demo = "zero_engine.demo:main"
zero-paper-api = "zero_engine.api:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
