[project]
name = "zero-engine"
version = "0.1.2"
description = "Paper-first runtime for ZERO's self-custodial onchain operations system"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "ZERO contributors" }]
keywords = [
  "autonomous-operations",
  "onchain",
  "paper-trading",
  "risk-operations",
  "zero",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://getzero.dev"
Repository = "https://github.com/zero-intel/zero"
Documentation = "https://github.com/zero-intel/zero/tree/main/docs"
Issues = "https://github.com/zero-intel/zero/issues"
Changelog = "https://github.com/zero-intel/zero/tree/main/docs/releases"

[project.scripts]
zero-paper-demo = "zero_engine.demo:main"
zero-paper-api = "zero_engine.api:main"
zero-engine-run = "zero_engine.runtime:main"
zero-memory = "zero_engine.memory:main"
zero-genesis = "zero_engine.genesis:main"
zero-evolve = "zero_engine.evolve:main"
zero-research = "zero_engine.research:main"
zero-decision-stack = "zero_engine.decision:main"
zero-mcp = "zero_engine.mcp:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.8",
]
live = [
  "hyperliquid-python-sdk>=0.23,<1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
