[package]
name = "zero-commands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
zero-engine-client.workspace = true
zero-session.workspace = true
zero-operator-state.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
zero-testkit.workspace = true
url.workspace = true

[[example]]
name = "live_smoke"
path = "examples/live_smoke.rs"
