[package]
name = "zero-doctor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Environment, engine, and operator readiness checks for ZERO."

[lints]
workspace = true

[dependencies]
zero-config.workspace = true
zero-engine-client.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
zero-testkit.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
