[package]
name = "zero-engine-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Typed HTTP and WebSocket client for the ZERO paper engine."

[lints]
workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
uuid.workspace = true
zero-operator-state.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
zero-testkit.workspace = true
