[package]
name = "zero-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Local session history, replay, and wrap-up storage for ZERO."

[lints]
workspace = true

[dependencies]
rusqlite.workspace = true
refinery.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
