[package]
name = "zero-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Test utilities for ZERO CLI and engine-client integration tests."

[lints]
workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
