[package]
name = "zero"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ZERO operator terminal for self-custodial onchain operations."

[lints]
workspace = true

[[bin]]
name = "zero"
path = "src/main.rs"

[dependencies]
zero-tui.workspace = true
zero-engine-client.workspace = true
zero-session.workspace = true
zero-config.workspace = true
zero-commands.workspace = true
zero-onboarding.workspace = true
zero-doctor.workspace = true
zero-headless.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
chrono.workspace = true
serde.workspace = true

[dev-dependencies]
zero-testkit.workspace = true
